@@ -6,6 +6,7 @@ See documentation at http://drupal.org/node/262064.
 Version 2.0 dev
 =================
 
+- Adjust the recent changes to the navigation header to be sure only the calendar header and not the date browser is affected.
 - Add the popup calendar date selector back into the D6 version.
 - #292164 Keep calendar date selector description from floating out of block in IE.
 - #298929 Fix code so that calendar legend doesn't display empty div when empty.
